<resources>
    <string name="app_name">Placemark</string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Description </string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title"> Please enter a Placemark Title </string>
    <string name="save_placemark"> Save Placemark </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_placemark_image">Select placemark image</string>
    <string name="change_placemark_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="title_activity_placemark_maps">Map of All Placemarks </string>
    <string name="menu_savePlacemark">Save</string>
    <string name="password_login_text">Password</string>
    <string name="username_login_text">Username</string>
    <string name="hero_login_text">Log in</string>
    <string name="username_signup_text">Username</string>
    <string name="name_signup_text">Name</string>
    <string name="password_signup_text">Password</string>
    <string name="hero_signup_text">Sing Up</string>
    <string name="signup_button_text">Sing Up</string>
    <string name="signup_text">"Don't have an account? Sign up here"</string>
    <string name="username_login_text">Username</string>
    <string name="password_login_text">Password</string>
    <string name="hero_login_text">Log in</string>
</resources>