<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="16dp">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/hero_signup_text"
      android:textSize="34sp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="32dp" />

  <EditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/name_signup_text"
      android:drawableLeft="@drawable/user_icon"
      android:drawablePadding="10dp"
      android:layout_marginTop="16dp" />

  <EditText
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username_signup_text"
      android:drawableLeft="@drawable/user_icon"
      android:drawablePadding="10dp"
      android:layout_marginTop="16dp" />

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password_login_text"
      android:inputType="textPassword"
      android:drawableLeft="@drawable/password_icon"
      android:drawablePadding="10dp"
      android:layout_marginTop="16dp" />

  <Button
      android:id="@+id/singupBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Sign In"
      android:layout_marginTop="24dp" />

</LinearLayout>

